--- a/src/app/components/sales/others/others.component.html
+++ b/src/app/components/sales/others/others.component.html
@@ -34,7 +34,7 @@
 
 
             <div class="col-xl-6">
-                <form enctype="multipart/form-data" [formGroup]="taxes" (ngSubmit)="addDays()">
+                <form enctype="multipart/form-data" [formGroup]="taxes" (ngSubmit)="addTaxes()">
                     <div class="card">
                         <div class="card-header">
                             <h5>Taxes</h5>
