Taxes and delv date updates

--- a/src/app/components/sales/others/others.component.html
+++ b/src/app/components/sales/others/others.component.html
@@ -13,16 +13,16 @@
                                         <input class="form-control"  name="bangalore" formControlName="bangalore" type="number" required="">
                                     </div>
                                     <div class="form-group">
+                                        <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Hyderabad</label>
+                                        <input class="form-control" name="hyderabad" formControlName="hyderabad" type="number" required="">
+                                    </div>
+                                    <div class="form-group">
                                         <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Mumbai</label>
                                         <input class="form-control"  name="mumbai" formControlName="mumbai" type="number" required="">
                                     </div>
                                     <div class="form-group">
                                         <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Pune</label>
                                         <input class="form-control"  name="pune" formControlName="pune" type="number" required="">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Hyderabad</label>
-                                        <input class="form-control" name="hyderabad" formControlName="hyderabad" type="number" required="">
                                     </div>
                                     <button type="submit" class="btn btn-primary mr-1">Add</button>  
                             </div>
@@ -46,6 +46,10 @@
                                         <input class="form-control" name="bangalore" formControlName="bangalore" type="number" required="">
                                     </div>
                                     <div class="form-group">
+                                        <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Hyderabad</label>
+                                        <input class="form-control" name="hyderabad" formControlName="hyderabad" type="number" required="">
+                                    </div>
+                                    <div class="form-group">
                                         <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Mumbai</label>
                                         <input class="form-control" name="mumbai" formControlName="mumbai" type="number" required="">
                                     </div>
@@ -53,13 +57,9 @@
                                         <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Pune</label>
                                         <input class="form-control" name="pune" formControlName="pune" type="number" required="">
                                     </div>
-                                    <div class="form-group">
-                                        <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Hyderabad</label>
-                                        <input class="form-control" name="hyderabad" formControlName="hyderabad" type="number" required="">
-                                    </div>
                                     <button type="submit" class="btn btn-primary mr-1">Add</button>  
                             </div>
-                            <div *ngIf="successMsg"><span>Updated Successfully!</span></div>
+                            <div *ngIf="successMsg1"><span>Updated Successfully!</span></div>
                         </div>
                     </div>
                 </form>
