--- a/src/app/components/products/digital/digital-edit/digital-edit.component.html
+++ b/src/app/components/products/digital/digital-edit/digital-edit.component.html
@@ -13,10 +13,6 @@
                                     <input class="form-control" id="validationCustom01" name="title" formControlName="title" type="text" required="">
                                 </div>
                                 <!-- <div class="form-group">
-                                    <label for="validationCustomtitle" class="col-form-label pt-0"><span>*</span> Quantity</label>
-                                    <input class="form-control" id="validationCustomtitle" name="quantity" [(ngModel)]="quantity" type="number" required="">
-                                </div> -->
-                                <!-- <div class="form-group">
                                     <label class="col-form-label"><span>*</span> Categories</label>
                                     <select class="custom-select" required="">
                                         <option value="">--Select--</option>
@@ -31,14 +27,24 @@
                                     <label class="col-form-label">Sort Summary</label>
                                     <textarea rows="5" name="description" formControlName="description" cols="12"></textarea>
                                 </div>
+                                
                                 <div class="form-group">
-                                    <label for="validationCustom02" class="col-form-label"><span>*</span> Product Price</label>
+                                    <label for="qty" class="col-form-label pt-0"><span>*</span> Quantity</label>
+                                    <input class="form-control" id="qty" name="qty" formControlName="qty" type="number" required="">
+                                </div>
+                                <div class="form-group">
+                                    <label for="validationCustom02" class="col-form-label"><span>*</span> Security deposit</label>
                                     <input class="form-control" name="price" formControlName="price" id="validationCustom02" type="text" required="">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="deliveryDate" class="col-form-label"><span>*</span> Product Delivery date</label>
+                                    <input class="form-control" name="deliveryDate" formControlName="deliveryDate" id="deliveryDate" type="number" required="">
                                 </div>
                                 
                                 
-                                    <!-- <label class="col-form-label pt-0"> Product Upload</label>
-                                    <input type="file" formControlName="product_image"  multiple (change)="onImageChange($event)" />         -->
+                                    <label class="col-form-label pt-0"> Product Upload</label>
+                                    <input type="file" formControlName="product_image"  multiple (change)="onImageChange($event)" />        
                                     
                                     <div class="form-group">
                                         <label class="col-form-label"><span>*</span> Brand</label>
@@ -67,7 +73,65 @@
                                     <div class="form-group">
                                         <label for="validationSerSz" class="col-form-label pt-0"><span>*</span> Screen Size</label>
                                         <input class="form-control" id="validationSerSz" name="screen_size" formControlName="screen_size" type="text" required="">
-                                    </div>                                    
+                                    </div> 
+                                    
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> Weight</label>
+                                        <input class="form-control" id="validationram" name="weight" formControlName="weight" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> USB ports</label>
+                                        <input class="form-control" id="validationram" name="usb" formControlName="usb" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> HDMI port</label>
+                                        <input class="form-control" id="validationram" name="hdmi" formControlName="hdmi" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> Clock speed</label>
+                                        <input class="form-control" id="validationram" name="clockSpeed" formControlName="clockSpeed" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> Battery</label>
+                                        <input class="form-control" id="validationram" name="battery" formControlName="battery" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-form-label"><span>*</span> Touch screen</label>
+                                        <div class="m-checkbox-inline mb-0 custom-radio-ml d-flex radio-animated">
+                                            <label class="d-block" for="edo-ani">
+                                                <input class="radio_animated"  name="touchScreen" formControlName="touchScreen" [value]="1"  id="touchScreen" type="radio">
+                                                Yes
+                                            </label>
+                                            <label class="d-block" for="edo-ani1">
+                                                <input class="radio_animated" name="touchScreen" formControlName="touchScreen" [value]="0"  id="touchScreen" type="radio">
+                                                No
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="validationram" class="col-form-label pt-0"><span>*</span> Connectivity</label>
+                                        <input class="form-control" id="validationram" name="connectivity" formControlName="connectivity" type="text" required="">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-form-label"><span>*</span> Webcam</label>
+                                        <div class="m-checkbox-inline mb-0 custom-radio-ml d-flex radio-animated">
+                                            <label class="d-block" for="edo-ani">
+                                                <input class="radio_animated"  name="webcam" formControlName="webcam" [value]="1"  id="webcam" type="radio">
+                                                Yes
+                                            </label>
+                                            <label class="d-block" for="edo-ani1">
+                                                <input class="radio_animated" name="webcam" formControlName="webcam" [value]="0"  id="webcam" type="radio">
+                                                No
+                                            </label>
+                                        </div>
+                                    </div>
 
                                     <div class="form-group">
                                         <label class="col-form-label"><span>*</span> Disk Type</label>
@@ -104,16 +168,16 @@
 
                                     <div formGroupName="tenure">
                                          <div class="form-group">
-                                            <label for="validationCustom03" class="col-form-label pt-0"><span>*</span> 3 Months</label>
-                                            <input class="form-control" id="validationCustom03" formControlName="threeMonths" type="text" required="">
+                                            <label for="validationCustom03" class="col-form-label pt-0"><span>*</span> 1 Month</label>
+                                            <input class="form-control" id="validationCustom03" formControlName="oneMonth" type="text" required="">
                                         </div>
                                         <div class="form-group">
-                                            <label for="validationCustom04" class="col-form-label pt-0"><span>*</span> 6 Months</label>
-                                            <input class="form-control" id="validationCustom04" formControlName="sixMonths" type="text" required="">
+                                            <label for="validationCustom04" class="col-form-label pt-0"><span>*</span> 3 Months</label>
+                                            <input class="form-control" id="validationCustom04" formControlName="threeMonths" type="text" required="">
                                         </div>
                                         <div class="form-group">
-                                            <label for="validationCustom05" class="col-form-label pt-0"><span>*</span> 9 Months</label>
-                                            <input class="form-control" id="validationCustom05" formControlName="nineMonths" type="text" required="">
+                                            <label for="validationCustom05" class="col-form-label pt-0"><span>*</span> 6 Months</label>
+                                            <input class="form-control" id="validationCustom05" formControlName="sixMonths" type="text" required="">
                                         </div>
                                         <div class="form-group">
                                             <label for="validationCustom06" class="col-form-label pt-0"><span>*</span> 12 Months</label>
