--- a/src/assets/scss/theme/_admin_style.scss
+++ b/src/assets/scss/theme/_admin_style.scss
@@ -5917,3 +5917,9 @@ $i:1;
 /*=====================
   Responsive CSS End
 ==========================*/
+
+
+/*mycss*/
+.order-details .modal-dialog{
+  max-width:1200px;
+}
