--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -7,8 +7,15 @@
                 </div>
                 <div class="card-body">
                     <div id="batchDelete" class="custom-datatable">
+                        <select name="ordersFilter" (change)="filterproducts($event.target.value)">
+                            <option>All products</option>
+                            <option>Laptops</option>
+                            <option>Desktops</option>
+                            <option>Camera</option>
+                        </select>
+                        <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button>
                         <div class="table-responsive">
-                            <!-- <ng2-smart-table [settings]="settings" [source]="digital_list" (editConfirm)="onEdit($event)" (deleteConfirm)="onDelete($event)"></ng2-smart-table> -->
+                            <!-- <ng2-smart-table [settings]="settings" [source]="productsList" (editConfirm)="onEdit(row.prod_id)" (deleteConfirm)="onDelete(row.prod_id)"></ng2-smart-table> -->
                             <table class="table table-striped table-bordered">
                                 <thead>
                                   <tr>
@@ -19,7 +26,7 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <tr *ngFor="let row of productsList">
+                                  <tr *ngFor="let row of filteredProducts">
                                     <td>{{row.prod_name}}</td>
                                     <td>{{row.brand_name}}</td>
                                     <td>{{row.prod_status === '1' ? 'Active' : 'Inactive'}}</td>
