--- a/src/app/components/products/physical/category/category.component.html
+++ b/src/app/components/products/physical/category/category.component.html
@@ -33,7 +33,7 @@
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" (click)="c('Save click')">Save</button>
+                                <button type="button" class="btn btn-primary">Save</button><!-- (click)="c('Save click')" -->
                                 <button class="btn btn-secondary" type="button" data-dismiss="modal"
                                     (click)="modal.dismiss('Cross click')">Close</button>
                             </div>
