--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -10,15 +10,26 @@
                     <div class="custom-datatable">
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
-                        <ngx-datatable class="bootstrap" [rows]="order" [columnMode]="'force'" [headerHeight]="50"
-                            [footerHeight]="50" [rowHeight]="'auto'" [limit]="5">
-                            <ngx-datatable-column prop="order id"></ngx-datatable-column>
-                            <ngx-datatable-column name="Product"></ngx-datatable-column>
-                            <ngx-datatable-column prop="payment status"></ngx-datatable-column>
-                            <ngx-datatable-column prop="paymeny method"></ngx-datatable-column>
-                            <ngx-datatable-column prop="order status"></ngx-datatable-column>
-                            <ngx-datatable-column name="Date"></ngx-datatable-column>
-                            <ngx-datatable-column name="Total"></ngx-datatable-column>
+                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                        <ngx-datatable class="bootstrap"  [rows]="order" [columnMode]="'force'" [headerHeight]="50"
+                            [footerHeight]="50" [rowHeight]="'auto'" [limit]="15">
+                            <ngx-datatable-column prop="txnid"></ngx-datatable-column>
+                            <ngx-datatable-column prop="payuid"></ngx-datatable-column>
+                            <ngx-datatable-column name="userId"></ngx-datatable-column>
+                            <ngx-datatable-column prop="status"></ngx-datatable-column>
+                            <ngx-datatable-column name="orderdate"></ngx-datatable-column>
+                            <ngx-datatable-column name="amount"></ngx-datatable-column>
+                            <ngx-datatable-column prop="delivery_status"></ngx-datatable-column>
+                            <ngx-datatable-column prop="txnid">
+                                <ng-template class="action" let-row="row" let-value="value" ngx-datatable-cell-template>
+                                    <a  class="nav-link edit" (click)="open(value)">
+                                      <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                    </a>
+                                    <a  class="nav-link edit" (click)="getOrderById(value)">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                    </a>
+                                  </ng-template>
+                            </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
                 </div>
@@ -26,3 +37,122 @@
         </div>
     </div>
     <!-- Container-fluid Ends-->
+
+    <ng-template #content let-c="close" let-d="dismiss">
+        <div class="modal-header text-center">
+          <h4 class="col-12 modal-title text-center" id="modal-basic-title">Update order & refund status</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="row">   
+                <form enctype="multipart/form-data" [formGroup]="updateStatus" (ngSubmit)="updateDeliveryStatus(orderId)">
+                               
+                <div class="col">
+                    <label>Update Delivery Status</label>
+                        <select formControlName="deliveryStatus">
+                            <option>Order booked</option>
+                            <option>Renewed</option>
+                            <option>Waiting for KYC</option>
+                            <option>Delivered</option>
+                            <option>Shipped</option>
+                            <option>Returned</option>
+                            <option>Delivery awaited</option>
+                        </select>                        
+                </div>
+                <div class="col">
+                    <label>Update payment Status</label>
+                    <select formControlName="refundStatus">
+                            <option>awaiting payment</option>
+                            <option>Paid</option>
+                            <option>Deposit refunded</option>
+                            <option>Complete refund</option>
+                            <!-- <option>Waiting for return</option>
+                            <option>Waiting for refund</option> -->
+                            <option>Refund initiated</option>
+                    </select>
+                </div>
+                
+                <button type="submit">Update</button>
+            </form>
+            </div>
+        </div>
+    </ng-template>
+
+    <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
+        <div class="modal-header text-center">
+          <h4 class="col-12 modal-title text-center" id="modal-basic-title">Order details</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="row" *ngFor="let o of fullOrderDetails">          
+                <div class="col">
+                    <h3>Order details</h3>
+
+                    <table class="table table-striped table-bordered" >
+                        <thead>
+                          <tr>
+                            <th>Order Id</th>
+                            <th>Payu Trans Id</th>
+                            <th>User Id</th>
+                            <th>Order date</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let o of fullOrderDetails">
+                          <tr>
+                            <td>{{o.txnid}}</td>
+                            <td>{{o.payuid}}</td>
+                            <td>{{o.userId}}</td>
+                            <td>{{o.orderdate}}</td>                         
+                          </tr>                          
+                        </tbody>
+                      </table>
+
+                    <h3>Product details</h3>
+                    <table class="table table-striped table-bordered" >
+                        <thead>
+                          <tr>
+                            <th>prod id</th>
+                            <th>Prod name</th>
+                            <th>Qty</th>
+                            <th>Tenure</th>
+                            <th>Security Deposit</th>
+                            <th>Rent/mo</th>
+                            <th>Delivery Date</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let p of productDetails">
+                          <tr>
+                            <td>{{p.id}}</td>
+                            <td>{{p.prodName}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prodPrice}}</td>
+                            <td>₹{{p.price}}</td>
+                            <td>{{p.delvdate}}</td>                            
+                          </tr>                          
+                        </tbody>
+                    </table>
+
+                    <div *ngFor="let o of fullOrderDetails" class="pull-right">
+                        <h4>Total security deposit: <span>₹{{o.securitydeposit}}</span></h4>
+                        <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                    </div> 
+                    
+                    <div class="addr">
+                        <hr>
+                        <h3>Delivery Address</h3>
+                        <div *ngFor="let o of fullOrderDetails">
+                            <h4>Name: <span>{{o.fname}}</span></h4>
+                            <h4>Address: <span>{{o.address}},{{o.city}}-{{o.pincode}}.</span></h4>
+                            <h4>Mobile: <span>{{o.mobile}}</span></h4>
+                            <h4>Email: <span>{{o.email}}</span></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-template>
