--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -32,10 +32,10 @@
                                     <td>{{row.prod_status === '1' ? 'Active' : 'Inactive'}}</td>
                                     <td>
                                         <div class="row">
-                                            <div class="col-md-2">
+                                            <div class="col-md-2" *appUserRole="[Role.admin,Role.sales]">
                                                 <a (click)="onEdit(row.prod_id)"><i class="fa fa-pencil"></i></a>
                                             </div>
-                                            <div class="col-md-2">
+                                            <div class="col-md-2" *appUserRole="[Role.admin]">
                                                 <a (click)="onDelete(row.prod_id)"><i class="fa fa-trash"></i></a>
                                             </div>
                                         </div>                            
