--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -11,7 +11,7 @@
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
                             <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
-                        <ngx-datatable class="bootstrap"  [rows]="order" [columnMode]="'force'" [headerHeight]="50"
+                        <!-- <ngx-datatable class="bootstrap"  [rows]="order" [columnMode]="'force'" [headerHeight]="50"
                             [footerHeight]="50" [rowHeight]="'auto'" [limit]="15">
                             <ngx-datatable-column prop="txnid"></ngx-datatable-column>
                             <ngx-datatable-column prop="payuid"></ngx-datatable-column>
@@ -30,7 +30,40 @@
                                     </a>
                                   </ng-template>
                             </ngx-datatable-column>
-                        </ngx-datatable>
+                        </ngx-datatable> -->
+                        <select name="ordersFilter" (change)="filterOrders($event.target.value)">
+                            <option>All orders</option>
+                            <option>Primary order</option>
+                            <option>Renewal order</option>
+                            <option>Replacement order</option>
+                            <option>Return order</option>
+                        </select>
+                        <table class="table table-striped table-bordered" >
+                          <thead>
+                            <tr>
+                              <th>Order Id</th>
+                              <th>Payu Trans Id</th>
+                              <th>Order date</th>
+                              <th>User Id</th>
+                              <th>User name</th>
+                              <th>Security deposit</th>
+                              <th>Payment status</th>
+                              <th>Delivery status</th>
+                            </tr>
+                          </thead>
+                          <tbody *ngFor="let o of filteredOrders">
+                            <tr (click)="getOrderById(o.txnid)">
+                              <td>{{o.txnid}}</td>
+                              <td>{{o.payuid}}</td>
+                              <td>{{o.orderdate}}</td> 
+                              <td>{{o.userId}}</td>
+                              <td>{{o.fname}}</td> 
+                              <td>₹{{o.securitydeposit}}</td>    
+                              <td>{{o.refund_status}}</td> 
+                              <td>{{o.delivery_status}}</td>                       
+                            </tr>                          
+                          </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -38,7 +71,7 @@
     </div>
     <!-- Container-fluid Ends-->
 
-    <ng-template #content let-c="close" let-d="dismiss">
+    <!-- <ng-template #content let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
           <h4 class="col-12 modal-title text-center" id="modal-basic-title">Update order & refund status</h4>
           <button type="button" class="close" aria-label="Close" (click)="d()">
@@ -59,6 +92,7 @@
                             <option>Shipped</option>
                             <option>Returned</option>
                             <option>Delivery awaited</option>
+                            <option>Partially delivered</option>
                         </select>                        
                 </div>
                 <div class="col">
@@ -68,8 +102,6 @@
                             <option>Paid</option>
                             <option>Deposit refunded</option>
                             <option>Complete refund</option>
-                            <!-- <option>Waiting for return</option>
-                            <option>Waiting for refund</option> -->
                             <option>Refund initiated</option>
                     </select>
                 </div>
@@ -78,7 +110,7 @@
             </form>
             </div>
         </div>
-    </ng-template>
+    </ng-template> -->
 
     <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
@@ -112,39 +144,108 @@
                       </table>
 
                     <h3>Product details</h3>
-                    <table class="table table-striped table-bordered" >
+                    <table class="table table-striped table-bordered" *ngFor="let o of fullOrderDetails">
                         <thead>
                           <tr>
                             <th>prod id</th>
                             <th>Prod name</th>
-                            <th>Qty</th>
-                            <th>Tenure</th>
-                            <th>Security Deposit</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Qty</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Tenure</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Security Deposit</th>
                             <th>Rent/mo</th>
-                            <th>Delivery Date</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Expected Delivery Date</th>
+                            <th *ngIf="o.order_type!='Return order'">Start date</th>
+                            <th *ngIf="o.order_type!='Return order'">Expiry date</th>
+                            <th *ngIf="o.order_type!='Return order'">Due date</th>
+                            <th *ngIf="o.order_type=='Return order'">Return date</th>
+                            <th>Asset #</th>
                           </tr>
                         </thead>
-                        <tbody *ngFor="let p of productDetails">
-                          <tr>
+                        <tbody *ngFor="let p of o.checkoutItemData">
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Primary order'">
                             <td>{{p.id}}</td>
-                            <td>{{p.prodName}}</td>
+                            <td>{{p.prod_name}}</td>
                             <td>{{p.qty}}</td>
                             <td>{{p.tenure}}</td>
-                            <td>₹{{p.prodPrice}}</td>
-                            <td>₹{{p.price}}</td>
-                            <td>{{p.delvdate}}</td>                            
-                          </tr>                          
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr>           
+                          <tr *ngIf="p.renewed==4 && o.order_type=='Renewal order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td> 
+                                                      
+                          </tr>   
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Replacement order'">
+                            <td>{{p.returnedProduct.id}}</td>
+                            <td>{{p.returnedProduct.prod_name}}</td>
+                            <td>{{p.returnedProduct.qty}}</td>
+                            <td>{{p.returnedProduct.tenure}}</td>
+                            <td>₹{{p.returnedProduct.prod_price}}</td>
+                            <td>₹{{(p.returnedProduct.price-0) + (p.returnedProduct.dp-0)}}</td>
+                            <td>{{p.returnedProduct.delvdate}}</td> 
+                            <td>{{p.returnedProduct.startDate}}</td>
+                            <td>{{p.returnedProduct.expiryDate}}</td>
+                            <td>{{dueDate(p.returnedProduct.startDate)}}</td>
+                            <td>{{p.returnedProduct.assetId}}</td>                                                       
+                          </tr>  
+                          <h5 *ngIf="p.ordered==1 && o.order_type=='Replacement order'">Replaced product</h5>
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Replacement order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr> 
+                          <tr *ngIf="o.order_type=='Return order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.returnDate}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr>               
                         </tbody>
                     </table>
 
                     <div *ngFor="let o of fullOrderDetails" class="pull-right">
-                        <h4>Total security deposit: <span>₹{{o.securitydeposit}}</span></h4>
-                        <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                        <div *ngIf="o.order_type!='Replacement order'">
+                          <h4>Sub total: ₹{{subTotal}}</h4>
+                          <h4>Taxes: {{totalTaxAmount(subTotal)}}</h4>
+                          <h4>Total security deposit: <span>₹{{o.securitydeposit}}</span></h4>
+                          <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                        </div>
+                        <div *ngIf="o.order_type=='Replacement order'">
+                          <h4>Difference rent: ₹{{diffInRent}}</h4>
+                          <h4>Damage / Delivery Charges: {{ddCharges}}</h4>
+                          <h4>Taxes: {{totalTaxAmount(diffInRent+ddCharges)}}</h4>
+                          <h4>Sub total: {{diffInRent+ddCharges+totalTaxAmount(diffInRent+ddCharges)}}</h4>
+                          <h4>Difference security deposit: <span>₹{{diffInDeposit}}</span></h4>
+                          <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                        </div>
                     </div> 
                     
                     <div class="addr">
                         <hr>
-                        <h3>Delivery Address</h3>
+                        <h3>Billing Address</h3>
                         <div *ngFor="let o of fullOrderDetails">
                             <h4>Name: <span>{{o.fname}}</span></h4>
                             <h4>Address: <span>{{o.address}},{{o.city}}-{{o.pincode}}.</span></h4>
