--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -104,7 +104,7 @@
                     </div>
                     <ul class="profile-dropdown onhover-show-div p-20 profile-dropdown-hover">
                         <li><a [routerLink]="'/settings/profile'">
-                                <app-feather-icons [icon]="'user'"></app-feather-icons>Edit Profile
+                                <app-feather-icons [icon]="'user'"></app-feather-icons>{{userName}}
                             </a></li>
                         <li><a href="javascript:void(0)">
                                 <app-feather-icons [icon]="'mail'"></app-feather-icons>Inbox
